Create a new windows for search result and re-arrange search result order.

--- a/src/ZillowAPI/Views/Home/SearchResult.cshtml
+++ b/src/ZillowAPI/Views/Home/SearchResult.cshtml
@@ -15,6 +15,46 @@
         <th>Value</th>
     </tr>
     <tr class="row">
+        <td>Zestimate:</td>
+        <td>@Html.DisplayTextFor(m => m.zestimateAmount)</td>
+    </tr>
+    <tr class="row">
+        <td>Last Updated Date:</td>
+        <td>@Html.DisplayTextFor(m => m.zestimateUpdateDate)</td>
+    </tr>
+    <tr class="row">
+        <td>30-day Change:</td>
+        <td>@Html.DisplayTextFor(m => m.zestimate30daysChange)</td>
+    </tr>
+    <tr class="row">
+        <td>High Valuation:</td>
+        <td>@Html.DisplayTextFor(m => m.zestimateHigh)</td>
+    </tr>
+    <tr class="row">
+        <td>Low Valuation:</td>
+        <td>@Html.DisplayTextFor(m => m.zestimateLow)</td>
+    </tr>
+    <tr class="row">
+        <td>Zillow Home Value Index:</td>
+        <td>@Html.DisplayTextFor(m => m.zillowIndex)</td>
+    </tr>
+    <tr class="row">
+        <td>Home details page:</td>
+        <td><a href="@Html.DisplayTextFor(m => m.linkHomeDetails)" target="_blank">@Html.DisplayTextFor(m => m.linkHomeDetails)</a></td>
+    </tr>
+    <tr class="row">
+        <td>Chart data page:</td>
+        <td><a href="@Html.DisplayTextFor(m => m.linkGraphs)" target="_blank">@Html.DisplayTextFor(m => m.linkGraphs)</a></td>
+    </tr>
+    <tr class="row">
+        <td>Map this home page:</td>
+        <td><a href="@Html.DisplayTextFor(m => m.linkMap)" target="_blank">@Html.DisplayTextFor(m => m.linkMap)</a></td>
+    </tr>
+    <tr class="row">
+        <td>Similar sales page:</td>
+        <td><a href="@Html.DisplayTextFor(m => m.linkComparable)" target="_blank">@Html.DisplayTextFor(m => m.linkComparable)</a></td>
+    </tr>
+    <tr class="row">
         <td>Request Street Address:</td>
         <td>@Html.DisplayTextFor(m => m.requestAddress)</td>
     </tr>
@@ -34,22 +74,7 @@
         <td>zpid:</td>
         <td>@Html.DisplayTextFor(m => m.zpid)</td>
     </tr>
-    <tr class="row">
-        <td>Home details page:</td>
-        <td><a href="@Html.DisplayTextFor(m => m.linkHomeDetails)" target="_blank">@Html.DisplayTextFor(m => m.linkHomeDetails)</a></td>
-    </tr>
-    <tr class="row">
-        <td>Chart data page:</td>
-        <td><a href="@Html.DisplayTextFor(m => m.linkGraphs)" target="_blank">@Html.DisplayTextFor(m => m.linkGraphs)</a></td>
-    </tr>
-    <tr class="row">
-        <td>Map this home page:</td>
-        <td><a href="@Html.DisplayTextFor(m => m.linkMap)" target="_blank">@Html.DisplayTextFor(m => m.linkMap)</a></td>
-    </tr>
-    <tr class="row">
-        <td>Similar sales page:</td>
-        <td><a href="@Html.DisplayTextFor(m => m.linkComparable)" target="_blank">@Html.DisplayTextFor(m => m.linkComparable)</a></td>
-    </tr>
+
     <tr class="row">
         <td>Street Address:</td>
         <td>@Html.DisplayTextFor(m => m.StreetAddress)</td>
@@ -74,30 +99,7 @@
         <td>Longitude:</td>
         <td>@Html.DisplayTextFor(m => m.longitude)</td>
     </tr>
-    <tr class="row">
-        <td>Zestimate (in $):</td>
-        <td>@Html.DisplayTextFor(m => m.zestimateAmount)</td>
-    </tr>
-    <tr class="row">
-        <td>Last updated date:</td>
-        <td>@Html.DisplayTextFor(m => m.zestimateUpdateDate)</td>
-    </tr>
-    <tr class="row">
-        <td>30-day change (in $):</td>
-        <td>@Html.DisplayTextFor(m => m.zestimate30daysChange)</td>
-    </tr>
-    <tr class="row">
-        <td>Valuation range (high) (in $):</td>
-        <td>@Html.DisplayTextFor(m => m.zestimateHigh)</td>
-    </tr>
-    <tr class="row">
-        <td>Valuation range (low) (in $):</td>
-        <td>@Html.DisplayTextFor(m => m.zestimateLow)</td>
-    </tr>
-    <tr class="row">
-        <td>Zillow Home Value Index:</td>
-        <td>@Html.DisplayTextFor(m => m.zillowIndex)</td>
-    </tr>
+
     <tr class="row">
         <td>Link to Region overview Page:</td>
         <td><a href="@Html.DisplayTextFor(m => m.linkOverview)" target="_blank">@Html.DisplayTextFor(m => m.linkOverview)</a></td>
@@ -110,9 +112,15 @@
         <td>Link to for sale homes page:</td>
         <td><a href="@Html.DisplayTextFor(m => m.linkForSale)" target="_blank">@Html.DisplayTextFor(m => m.linkForSale)</a></td>
     </tr>
+  
+    <tr class="row">
+        <td>View JSON data:</td>
+        <td>@Html.ActionLink("View JSON Data", "HomeSearchJSON2", "Home", new { address = @Html.DisplayTextFor(m => m.requestAddress), citystatezip = @Html.DisplayTextFor(m => m.requestCityStateZip) }, new { target="_blank" })</td>
+    </tr>
+
     <tr class="row">
         <td>View Raw JSON data:</td>
-        <td>@Html.ActionLink("View Raw JSON Data", "HomeSearchJSON", "Home",  new { address = @Html.DisplayTextFor(m => m.requestAddress), citystatezip = @Html.DisplayTextFor(m => m.requestCityStateZip) }, null)</td>
+        <td>@Html.ActionLink("View Raw JSON Data", "HomeSearchJSON", "Home", new { address = @Html.DisplayTextFor(m => m.requestAddress), citystatezip = @Html.DisplayTextFor(m => m.requestCityStateZip) }, new { target = "_blank" })</td>
     </tr>
 </table>
        
