--- a/src/ZillowAPI/Views/Home/Index.cshtml
+++ b/src/ZillowAPI/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="row">
-        <form action="/Home/Index" method="post" class="form-line">
+        <form action="/Home/Index" method="post" class="form-line" target="_blank">
             <h3>Please enter a home address to search</h3>
             <fieldset>
 
@@ -34,7 +34,7 @@
                 </div>
 
                 <div class="form-group">
-                    <!-- State -->
+                    <!-- Zip Code -->
                     <label for="zipcode" class="control-label col-sm-2">Zip Code: </label>
                     <div class="col-sm-10">
                         @Html.TextBoxFor(m => m.Zipcode, new { @class = "form-control" })
