--- a/src/ZillowAPI/Views/Shared/_Layout.cshtml
+++ b/src/ZillowAPI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ZillowAPIDemo</title>
+    <title>@ViewData["Title"] - ZillowAPI</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ZillowAPIDemo</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">ZillowAPI</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
