Remove AWS link

--- a/src/ZillowAPI/Views/Home/About.cshtml
+++ b/src/ZillowAPI/Views/Home/About.cshtml
@@ -3,7 +3,7 @@
 }
 <h3>@ViewData["Message"]</h3>
 
-<p> A simple ASP.NET Core Web App that allows a user to enter an US address for a home and then see
+<p> A simple .NET Core Web App that allows a user to enter an US address for a home and then see
 the price and other details for that home using Zillow's GetSearchResults API. The Web App is deployed to both Azure and AWS</p>
 <table class="table">
     
@@ -14,9 +14,5 @@ the price and other details for that home using Zillow's GetSearchResults API. T
     <tr class="row">
         <td class="row">Azure Link:</td>
         <td><a href="http://zillowapi2.azurewebsites.net" target="_blank">http://zillowapi2.azurewebsites.net</a></td>
-    </tr>
-    <tr class="row">
-        <td class="row">AWS Link:</td>
-        <td><a href="http://zillowapi.us-west-2.elasticbeanstalk.com" target="_blank">http://zillowapi.us-west-2.elasticbeanstalk.com</a></td>
     </tr>
 </table>
