Update About Page

--- a/src/ZillowAPI/Views/Home/About.cshtml
+++ b/src/ZillowAPI/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <p> A simple .NET Core Web App that allows a user to enter an US address for a home and then see
-the price and other details for that home using Zillow's GetSearchResults API. The Web App is deployed to both Azure and AWS</p>
+the price and other details for that home using Zillow's GetSearchResults API. The Web App is deployed to Azure.</p>
 <table class="table">
     
     <tr class="row">
@@ -12,7 +12,7 @@ the price and other details for that home using Zillow's GetSearchResults API. T
         <td><a href="https://github.com/peteryumei/ZillowAPI" target="_blank">https://github.com/peteryumei/ZillowAPI</a></td>
     </tr>
     <tr class="row">
-        <td class="row">Azure Link:</td>
+        <td class="row">Azure Web App Link:</td>
         <td><a href="http://zillowapi2.azurewebsites.net" target="_blank">http://zillowapi2.azurewebsites.net</a></td>
     </tr>
 </table>
