--- a/src/ZillowAPI/Views/Home/Index.cshtml
+++ b/src/ZillowAPI/Views/Home/Index.cshtml
@@ -7,46 +7,32 @@
     <div class="row">
         <form action="/Home/Index" method="post" class="form-line" target="_blank">
             <h3>Please enter a home address to search</h3>
-            <fieldset>
-
-                <div class="form-group">
-                    <!-- Street Address -->
-                    <label for="street" class="control-label col-sm-2">Street Address: </label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(m => m.StreetAddress, new { @class = "form-control" }) 
-                    </div>
-                </div>
-                <br />
-                <div class="form-group">
-                    <!-- City -->
-                    <label for="city" class="control-label col-sm-2">City: </label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(m => m.City, new { @class = "form-control" })
-                    </div>
-                </div>
-
-                <div class="form-group">
+            <table class="table-condensed" >
+                <tr class="row" >
+                    <td ><label for="street" >Street Address: </label></td>
+                    <td>@Html.TextBoxFor(m => m.StreetAddress, new { @class = "form-control" })</td>
+                </tr>
+                <tr class="row">
+                    <td><label for="city" >City: </label></td>
+                    <td>@Html.TextBoxFor(m => m.City, new { @class = "form-control" })</td>
+                </tr>
+                <tr class="row">
                     <!-- State -->
-                    <label for="state" class="control-label col-sm-2">State: </label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(m => m.State, new { @class = "form-control" })
-                    </div>
-                </div>
+                    <td><label for="state" >State: </label></td>
+                    <td>@Html.TextBoxFor(m => m.State, new { @class = "form-control" })</td>
+                </tr>
 
-                <div class="form-group">
+                <tr class="row">
                     <!-- Zip Code -->
-                    <label for="zipcode" class="control-label col-sm-2">Zip Code: </label>
-                    <div class="col-sm-10">
-                        @Html.TextBoxFor(m => m.Zipcode, new { @class = "form-control" })
-                    </div>
-                </div>
-                <p class="">Both city and state is required if zip code is not provided</p>
+                    <td><label for="zipcode">Zip Code: </label></td>
+                    <td>@Html.TextBoxFor(m => m.Zipcode, new { @class = "form-control" })</td>
+                </tr>
 
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </div>
-
-            </fieldset>
+            </table>
+            <p class="">Both city and state is required if zip code is not provided</p>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
 
     </div>
